--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "preentrega1-aranibe",
-  "homepage": "maximoarielaranibe.primerprentrega.github.io/",
+  "homepage": "https://maximoarielaranibe.primerprentrega.github.io/",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
